// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-item-counts #render should render as expected (1) 1`] = `
<gux-pagination-buttons current-page="0" disabled="false" layout="advanced" total-pages="0">
  <div class="gux-advanced gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (2) 1`] = `
<gux-pagination-buttons current-page="1" disabled="false" layout="advanced" total-pages="10">
  <div class="gux-advanced gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
          1
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 2">
          2
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 3">
          3
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 4">
          4
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 5">
          5
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (3) 1`] = `
<gux-pagination-buttons current-page="5" disabled="false" layout="advanced" total-pages="10">
  <div class="gux-advanced gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button aria-label="Page 1">
          1
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 4">
          4
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 5 selected" class="gux-pagination-buttons-list-current">
          5
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 6">
          6
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (4) 1`] = `
<gux-pagination-buttons current-page="5" disabled="true" layout="advanced" total-pages="10">
  <div class="gux-advanced gux-pagination-buttons-container">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button aria-label="Page 1" disabled="">
          1
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button disabled="" totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 4" disabled="">
          4
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 5 selected" class="gux-pagination-buttons-list-current" disabled="">
          5
        </button>
      </gux-button-slot>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 6" disabled="">
          6
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button disabled="" totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10" disabled="">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (5) 1`] = `
<gux-pagination-buttons current-page="0" disabled="false" layout="simple" total-pages="0">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container"></div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (6) 1`] = `
<gux-pagination-buttons current-page="1" disabled="false" layout="simple" total-pages="10">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button aria-label="Page 1 selected" class="gux-pagination-buttons-list-current">
          1
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (7) 1`] = `
<gux-pagination-buttons current-page="5" disabled="false" layout="simple" total-pages="10">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button aria-label="Page 5 selected" class="gux-pagination-buttons-list-current">
          5
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;

exports[`gux-pagination-item-counts #render should render as expected (8) 1`] = `
<gux-pagination-buttons current-page="5" disabled="true" layout="simple" total-pages="10">
  <div class="gux-pagination-buttons-container gux-simple">
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="First page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="First page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-left-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Previous page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Previous page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-left-small-regular"></gux-icon>
      </gux-button>
    </div>
    <div class="gux-pagination-buttons-list-container">
      <gux-button-slot accent="ghost">
        <button aria-label="Page 5 selected" class="gux-pagination-buttons-list-current" disabled="">
          5
        </button>
      </gux-button-slot>
      <gux-pagination-ellipsis-button disabled="" totalpages="10"></gux-pagination-ellipsis-button>
      <gux-button-slot accent="ghost">
        <button aria-label="Page 10" disabled="">
          10
        </button>
      </gux-button-slot>
    </div>
    <div class="gux-pagination-buttons-group">
      <gux-button gux-title="Next page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Next page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="custom/chevron-right-small-regular"></gux-icon>
      </gux-button>
      <gux-button gux-title="Last page">
        <mock:shadow-root>
          <button class="gux-ghost gux-icon-only" disabled="" title="Last page" type="button">
            <slot></slot>
          </button>
        </mock:shadow-root>
        <gux-icon decorative="" icon-name="fa/chevrons-right-regular"></gux-icon>
      </gux-button>
    </div>
  </div>
</gux-pagination-buttons>
`;
